# gainput

./: CMakeLists.txt
lib/include/gainput/: GainputContainers.h
lib/source/gainput/keyboard/: GainputInputDeviceKeyboardWin.h
lib/source/gainput/mouse/: GainputInputDeviceMouseMac.mm
